--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="flavors">
 
                     <div class="flavor">
-                        <img src="assets/calabresa.jpg" alt="">
+                        <img src="assets/flavors/calabresa.jpg" alt="">
 
                         <h3 class="fName">Calabresa</h3>
 
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="flavor">
-                        <img src="assets/frango-catupiry.jpg" alt="">
+                        <img src="assets/flavors/frango-catupiry.jpg" alt="">
 
                         <h3 class="fName">Frango com Catupiry</h3>
 
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="flavor">
-                        <img src="assets/muzzarela.jpeg" alt="">
+                        <img src="assets/flavors/muzzarela.jpeg" alt="">
 
                         <h3 class="fName">Mussarela</h3>
 
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="flavor">
-                        <img src="assets/portuguesa.jpg" alt="">
+                        <img src="assets/flavors/portuguesa.jpg" alt="">
 
                         <h3 class="fName">Portuguesa</h3>
 
@@ -107,7 +107,7 @@
                     </div>
 
                     <div class="flavor">
-                        <img src="assets/presunto.jpg" alt="">
+                        <img src="assets/flavors/presunto.jpg" alt="">
 
                         <h3 class="fName">Presunto</h3>
 
@@ -121,6 +121,26 @@
                         </div>
 
                         <button>Comprar</button>
+                    </div>
+
+                </div>
+
+
+                <h2>Redes Sociais</h2>
+
+                <div class="contacts">
+
+                    <div class="contact">
+                        <img src="assets/icons/whatsapp.png" alt="Whatsapp">
+                        <span>(21) 97070-7070</span>
+                    </div>
+                    <div class="contact">
+                        <img src="assets/icons/facebook.png" alt="Facebook">
+                        <span>PizzaNetRJ</span>
+                    </div>
+                    <div class="contact">
+                        <img src="assets/icons/instagram.png" alt="Facebook">
+                        <span>@pizzanetrj</span>
                     </div>
 
                 </div>
