--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PizzaNetRJ</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="jquery.js"></script>
 </head>
 
@@ -19,14 +19,18 @@
             <h1>PizzaNetRJ</h1>
 
             <div class="login">
-                <button>Cadastrar</button>
-                <button>Entrar</button>
+                <a href="html/signin.html"><button>Cadastrar</button></a>
+                <a href="html/login.html"><button>Entrar</button></a>
             </div>
         </div>
 
     </header>
 
     <main>
+
+        <button class="cart">
+            <img src="assets/icons/shopping-cart.png" alt="">
+        </button>
 
         <div class="bg"></div>
 
