--- a/html/login.html
+++ b/html/login.html
@@ -16,7 +16,7 @@
     <header>
 
         <div class="row">
-            <h1>PizzaNetRJ</h1>
+            <img src="../assets/logo.png" alt="">
         </div>
 
     </header>
