--- a/html/signin.html
+++ b/html/signin.html
@@ -16,8 +16,9 @@
     <header>
 
         <div class="row">
-            <h1>PizzaNetRJ</h1>
+            <img src="../assets/logo.png" alt="">
         </div>
+
 
     </header>
 
