--- a/html/login.html
+++ b/html/login.html
@@ -17,6 +17,10 @@
 
         <div class="row">
             <img src="../assets/logo.png" alt="">
+
+            <div class="login">
+                <a href="../index.html"><button>Início</button></a>
+            </div>
         </div>
 
     </header>
@@ -26,7 +30,7 @@
             <h1>Entrar</h1>
 
             <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
+            <input type="password" placeholder="Senha">
 
             <a href="../index.html"><button class="loginBtn">Entrar</button></a>
 
