--- a/html/signin.html
+++ b/html/signin.html
@@ -17,8 +17,11 @@
 
         <div class="row">
             <img src="../assets/logo.png" alt="">
-        </div>
 
+            <div class="login">
+                <a href="../index.html"><button>Início</button></a>
+            </div>
+        </div>
 
     </header>
 
@@ -27,8 +30,8 @@
             <h1>Cadastrar</h1>
 
             <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <input type="password" placeholder="Confirm Password">
+            <input type="password" placeholder="Senha">
+            <input type="password" placeholder="Confirme sua senha">
 
             <a href="../index.html"><button class="loginBtn">Entrar</button></a>
 
