--- a/html/login.html
+++ b/html/login.html
@@ -16,11 +16,7 @@
     <header>
 
         <div class="row">
-            <img src="../assets/logo.png" alt="">
-
-            <div class="login">
-                <a href="../index.html"><button>Início</button></a>
-            </div>
+            <a href="../index.html"><img src="../assets/logo.png" alt=""></a>
         </div>
 
     </header>
