--- a/html/menu.html
+++ b/html/menu.html
@@ -19,7 +19,7 @@
         <div class="content">
 
             <div class="row">
-                <img src="../assets/logo.png" alt="">
+                <a href="../index.html"><img src="../assets/logo.png" alt=""></a>
             </div>
 
             <nav>
