--- a/html/menu.html
+++ b/html/menu.html
@@ -19,12 +19,14 @@
         <div class="content">
 
             <div class="row">
-                <a href="../index.html"><img src="../assets/logo.png" alt=""></a>
+                <img src="../assets/logo.png" alt="">
             </div>
 
             <nav>
-                <button class="menuBtnSelected" id="rowMenuBtn1">PIZZAS</button>
-                <button id="rowMenuBtn2">SOBREMESAS</button>
+                <div class="rowMenu">
+                    <button class="menuBtnSelected" id="rowMenuBtn1">PIZZAS</button>
+                    <button id="rowMenuBtn2">SOBREMESAS</button>
+                </div>
             </nav>
 
             <div class="pizzas">
