--- a/html/error.html
+++ b/html/error.html
@@ -14,16 +14,21 @@
     <main>
         <h1>Erro</h1>
 
-        <p>O link que você clicou ainda não está pronto</p>
+        <p>Ops... Parece que essa página não está pronta!</p>
 
         <style>
             main {
                 margin: auto;
+                margin-top: 100px;
                 width: fit-content;
                 color: white;
                 text-align: center;
 
                 padding: 50px;
+            }
+
+            h1 {
+                margin-bottom: 50px;
             }
         </style>
     </main>
