--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
                 <p>Twitter: <a href="html/error.html">@pizzanetrj</a></p>
             </div>
 
+            <div class="footerBlock">
+                <h4>CONHEÇA NOSSAS UNIDADES</h4>
+                <p><a href="html/error.html">Tijuca</a></p>
+                <p><a href="html/error.html">Copacabana</a></p>
+                <p><a href="html/error.html">Méier</a></p>
+            </div>
+
         </div>
     </footer>
 
